figue/tests/integration/snapshots/main__integration__ariadne__ariadne_expected_value_got_eof.snap
---
source: tests/integration/ariadne.rs
expression: ariadne_output
---
Error: flag --concurrency requires a value
   ╭─[ <cli>:1:1 ]
   │
 1 │ --concurrency
   │ ──────┬──────  
   │       ╰──────── flag --concurrency requires a value
───╯
